<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_main">Nightscout</string>

    <string name="action_settings">Settings</string>

    <string name="unknown_values">---</string>

    <string name="crash_toast_text">Oops! A crash has occurred and is being reported to Nightscout so it can be fixed!</string>
    <string name="feedback_dialog_title">Report an issue</string>
    <string name="feebback_dialog_text">Report an issue</string>
    <string name="feedback_dialog_comment_prompt">Please include brief description of the issue you encountered</string>
    <string name="feedback_dialog_ok_toast">Thank you!</string>
    <string name="feedback_toast_text" />
    <string name="message_user_not_understand">Reading from device is disabled until you review and accept &#8220;I understand&#8221; in preferences</string>
    <string name="acra_enabled_summary">Crash reporting is enabled</string>
    <string name="acra_disabled_summary">Crash reporting is disabled</string>
    <string name="acra_email_dialog_title">Email</string>
    <string name="acra_user_email_dialog_message">This is the email address included in bug reports and automatic crash reports. This field is optional</string>
    <string name="display_sgv" />
    <string name="display_trend" />

    <string name="close_menu_text">Close</string>
    <string name="feedback_menu_text">Report an issue</string>
    <string name="gap_sync_menu_text">Gap sync</string>
    <string name="preferences_menu_text">Preferences</string>
    <string name="USBLabelText">USB</string>
    <string name="UploadLabelText">Upload</string>
    <string name="DexBatteryLabelText">Dex Battery</string>
    <string name="TimeSyncLabelText">Time</string>
    <string name="unknown_mongo_host">Error resolving Mongo host. Double check mongo url.</string>
    <string name="illegal_rest_url">Could not create API uploader. Check your settings.</string>

    <string name="donate_dialog_title">Donate data?</string>
    <string name="donate_dialog_summary">Will you anonymously donate your CGM data for research in order to speed up diabetes innovation?</string>
    <string name="donate_dialog_yes">Yes</string>
    <string name="donate_dialog_no">No</string>

    <string name="auto_configure_title">Auto configure</string>
    <string name="pref_title_mqtt">MQTT</string>
    <string name="pref_title_mqtt_enabled">Enabled</string>
    <string name="pref_summary_mqtt_enabled">If you\'re using eg CloudMQTT this should be enabled</string>

    <string name="pref_title_mqtt_endpoint">URI</string>
    <string name="pref_dialog_mqtt_endpoint">Enter MQTT URI"</string>
    <string name="pref_message_mqtt_endpoint">Replace example values in {}\'s with your correct values</string>
    <string name="pref_default_mqtt_endpoint">ssl://{host}.cloudmqtt.com:{11111}</string>

    <string name="pref_title_mqtt_user">MQTT user name</string>
    <string name="pref_dialog_mqtt_user">Enter mqtt user name</string>
    <string name="pref_message_mqtt_user">This the mqtt user name.</string>
    <string name="pref_default_mqtt_user" />

    <string name="pref_title_mqtt_pass">MQTT password</string>
    <string name="pref_dialog_mqtt_pass">Enter mqtt password</string>
    <string name="pref_message_mqtt_pass">This the mqtt password.</string>
    <string name="pref_default_mqtt_pass" />

    <string name="TimeChangeDetected">Time change detected</string>
    <string name="illegal_mongo_uri">Mongo uri has invalid syntax. Please double check.</string>
    <string name="unknown_rest_host">Cannot connect to %s, please check that you are connected to the internet, and that the url is correct.</string>
    <string name="invalid_rest_uri">Invalid rest url %s, please double check formatting. URLs should be percent encoded</string>
    <string name="invalid_mqtt_endpoint">Invalid mqtt url %s, please double check formatting.</string>
    <string name="rest_uri_missing_token">Missing token for rest uri %s.</string>
    <string name="invalid_input_title">Invalid Input</string>
    <string name="ok">OK</string>
    <string name="version_unknown">Unknown version</string>
    <string name="default_pwd_name">Camping</string>
    <string name="app_started">Application started</string>
    <string name="g4_connected">G4 receiver is connected</string>
    <string name="g4_disconnected">G4 has been disconnected</string>
    <string name="event_log_menu_text">Event log</string>
    <string name="event_sync_log">Receiver download complete</string>
    <string name="crc_fail_log">CRC check failed. Will try again in 5 minutes</string>
    <string name="unknown_fail_log">Unknown error encountered. Will try again in 5 minutes</string>
    <string name="event_fail_log">Application error encountered while reading from receiver.</string>
    <string name="event_success_upload">Successful upload to %s</string>
    <string name="development_settings">Development Drawer</string>
    <string name="nightscout_icon">Nightscout Icon</string>
    <string name="pref_about_hash">Git hash</string>
    <string name="event_fail_upload">Upload to %s has failed</string>
    <string name="device_log_menu">Device logs</string>
    <string name="upload_log_menu">Upload Logs</string>
    <string name="mqtt_mgr_not_initialized">MQTT connection has not been initialized.</string>
    <string name="no_uploaders">No uploaders have been configured.</string>
    <string name="unhandled_mqtt_exception">MQTT Exception: %s</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connecting_to_device">Connecting</string>
    <string name="bluetooth_scan_text">BT Scan</string>
    <string name="title_activity_bluetooth_scan">Bluetooth</string>
    <string name="pref_title_device_type">Device type</string>
    <string name="pref_share2_serial_number">Share Serial number</string>
    <string name="scan_share2_barcode">Scan Share Barcode</string>
    <string name="pref_share2_scan_barcode_summary">Scan the barcode on the share receiver</string>
    <string name="button_force_sync">Force sync</string>
    <string name="pref_bt_scan_share2">Discover Share device</string>
    <string name="pref_bt_scan_summary">Scan for bluetooth G4 Share receivers</string>
    <string name="menu_clear_log">Clear</string>
    <string name="warn_disabled_bluetooth">Bluetooth must be enabled to access the Share system</string>
    <string name="pref_title_insertion_data">Insertion Data</string>
    <string name="pref_summary_insertion_data">Sensor insertion history</string>
    <string name="invalid_share2_serial">Please double check the Share2 serial number provided %s. It does not match the expected pattern</string>
    <string name="pref_title_raw_data">Raw Data</string>
    <string name="pref_summary_raw_data">Data required to calculate raw values</string>
    <string name="pref_summary_camping_enabled">Enable camping mode</string>
    <string name="pref_title_camping_enabled">Camping mode</string>
    <string name="pref_summary_broadcast_enabled">Enable broadcast of data so other apps can receive it</string>
    <string name="pref_title_broadcast_enabled">Broadcast data</string>
    <string name="pref_category_title_config_backup">Configuration backups</string>
    <string name="pref_backup_title">Backup configuration</string>
    <string name="pref_restore_title">Restore configuration</string>
    <string name="backup_saved_message">A backup of your configuration has been saved</string>
    <string name="backup_restored_message">Your configuration has been restored</string>
    <string name="backup_not_found_message">No backups of your configuration found =(</string>
</resources>
