<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nightscout="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/preferences_menu_text" />
    <item
        android:id="@+id/feedback_settings"
        android:orderInCategory="100"
        android:title="@string/feedback_menu_text" />
    <item
        android:id="@+id/gap_sync"
        android:orderInCategory="100"
        android:title="@string/gap_sync_menu_text" />
    <item
        android:id="@+id/event_log"
        android:orderInCategory="100"
        android:title="@string/event_log_menu_text" />
    <item
        android:id="@+id/close_settings"
        android:orderInCategory="100"
        android:title="@string/close_menu_text" />
    <item
        android:id="@+id/usb_log"
        android:orderInCategory="100"
        nightscout:showAsAction="ifRoom"
        android:title="@string/event_log_device_menu_text" />
    <item
        android:id="@+id/upload_log"
        android:orderInCategory="100"
        nightscout:showAsAction="ifRoom"
        android:title="@string/event_log_upload_menu_text" />
</menu>