<?xml version="1.0" encoding="utf-8"?>

<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:columnCount="2"
        tools:ignore="UselessParent">
    <LinearLayout
            android:layout_columnSpan="2"
            android:layout_width="0dp"
            android:layout_gravity="start|fill_horizontal"
            android:orientation="horizontal"
            >
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:orientation="vertical"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_main"
                    style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/development_settings"
                    style="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle"
                    />
        </LinearLayout>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/nightscout_icon"/>
    </LinearLayout>
    <TextView
            android:layout_gravity="start|center_vertical"
            android:text="Generate EGV:"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_gravity="start|center_vertical|fill_horizontal"
            android:gravity="center_vertical"
            >
        <EditText
                android:id="@+id/debug_egv_input"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="100"
                android:layout_weight="1"
                android:inputType="number"
                android:imeOptions="actionDone"
                />
        <Button
                android:id="@+id/debug_generate_egv_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="Generate"
                android:visibility="visible"
                />
    </LinearLayout>

</GridLayout>