<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TableLayout
            android:id="@+id/iconView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff006578">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewUSB"
                    android:src="@drawable/ic_usb_disconnected"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription"/>

            <ImageView
                    android:id="@+id/imageViewUploadStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_upload_fail"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewRcvrBattery"
                    android:layout_column="3"
                    android:layout_weight="1"
                    android:src="@drawable/battery"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewTimeIndicator"
                    android:layout_column="4"
                    android:layout_weight="1"
                    android:src="@drawable/ic_clock_bad"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription"/>
        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/USBLabelText"
                    android:textSize="12sp"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/UploadLabelText"
                    android:minLines="1"
                    android:textSize="12sp"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rcvrBatteryLabel"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/DexBatteryLabelText"
                    android:textSize="12sp"
                    android:layout_column="3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/TimeSyncLabelText"
                    android:textSize="12sp"
                    android:layout_column="4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>